--- a/helm/chart/Chart.yaml
+++ b/helm/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: chart
-description: A Helm chart for Kubernetes
+description: A Helm chart for php-app
 
 # A chart can be either an 'application' or a 'library' chart.
 #
